# docker-http

./: .coveragerc  .flake8  DEV.md  Dockerfile  README.md  docker-compose.yaml  docker-http.py  docker_build.sh  docker_run.sh  pyproject.toml
.github/workflows/: publish.yml
src/dockerhttp/: __init__.py
src/dockerhttp/docker/: __init__.py  client.py  container.py
src/dockerhttp/server/: app.py
