[tool.poetry]
name = "docker-http"
version = "0.1.0"
description = ""
authors = ["fm-labs <flowmotionlabs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
docker = "^7.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
coverage = "^7.3.2"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
